testdata/baselines/reference/submodule/conformance/library-reference-10.errors.txt
/foo/consumer.ts(2,1): error TS2581: Cannot find name '$'. Do you need to install type definitions for jQuery? Try `npm i --save-dev @types/jquery`.


==== /foo/consumer.ts (1 errors) ====
    /// <reference types="jquery" />
    $.foo();
    ~
!!! error TS2581: Cannot find name '$'. Do you need to install type definitions for jQuery? Try `npm i --save-dev @types/jquery`.
    
==== /foo/types/jquery/package.json (0 errors) ====
    {
        "typings": "jquery.d.ts"
    }
    
==== /foo/types/jquery/jquery.d.ts (0 errors) ====
    declare var $: { foo(): void };
    
    